--- a/cnf/my.cnf
+++ b/cnf/my.cnf
@@ -10,7 +10,35 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
-character-set-server = utf8
+character-set-server=utf8
+user=mysql
+datadir=/var/lib/mysql
+port=3306
+max_connections=1000
+default-storage-engine=InnoDB
+log_bin=mysql-bin
+max_binlog_size=1M
+expire_logs_days=5
+
+# slow query
+slow_query_log=ON
+long_query_time=1
+log_slow_queries=slow.log
+#slow_query_log_file=/var/lib/mysql/slow.log
+# インデックスを使用していないクエリを記録
+#long_queries_not_using_indexes=ON
+#long_output=TABLE
+
+# InnoDB関連
+# InnoDBのデータ領域をメモリ上に管理するためのバッファサイズ
+# 物理メモリサイズの60~80%が目安
+# 単位MB
+innodb_buffer_pool_size=16M
+# redoログのサイズ
+innodb_log_file_size=2M
+# データとログの読み書き方式を指定
+#innodb_flush_method
+
 # this is only for embedded server
 [embedded]
 
